# NimbusStore

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
configs/: fuse.yaml  metadata.yaml  s3_gateway.yaml
docs/: NEBULA2.0_ARCHITECTURE.md  STAGE0_GUIDE.md
include/nebulastore/common/: async.h  bounded_queue.h  coroutines_pool.h  dout.h  logger.h  logger_v2.h  result.h  result_macros.h  semaphore.h  singleflight.h  subsys.h  types.h
include/nebulastore/config/: config_base.h
include/nebulastore/metadata/: btree_index.h  meta_engine.h  metadata_service.h  rocksdb_store.h  slice_tree.h
include/nebulastore/namespace/: service.h
include/nebulastore/net/: transport.h
include/nebulastore/protocol/: gateway.h  http_server.h  s3_backend_rocksdb.h  s3_handler.h  s3_metadata.h  s3_router.h  s3_types.h  s3_xml.h
include/nebulastore/raft/: raft_types.h  state_machine.h
include/nebulastore/storage/: backend.h  backend_factory.h
include/nebulastore/usrbio/: ioring.h
include/yig/common/: types.h
include/yig/metadata/: metadata_service.h  rocksdb_store.h
include/yig/namespace/: service.h
include/yig/protocol/: gateway.h
include/yig/storage/: backend.h  backend.h.tmp.538363.1767027258960
scripts/: build.sh  dev_setup.sh
src/: CMakeLists.txt
src/common/: logger.cpp  logger_v2.cpp
src/master/: main.cpp
src/metadata/: btree_index.cpp  metadata_partition.cpp  metadata_service_impl.cpp  rocksdb_codec.cpp  rocksdb_store.cpp  slice_tree.cpp
src/namespace/: service.cpp
src/protocol/: fuse_client.cpp  http_server.cpp  s3_gateway.cpp
src/storage/: local_backend.cpp  s3_backend.cpp
tests/: CMakeLists.txt  basic_test.cpp  logger_test.cpp  module_test.cpp  s3_test.cpp  stage0_test.cpp
